# asriel

./: .gitmodules  README.md  coding_guidelines.md  master.clang_format
LeaderlessGIT/: .gitignore  build.zig  build.zig.zon
LeaderlessGIT/frontend/: astro.config.mjs  package-lock.json  package.json
LeaderlessGIT/frontend/src/components/: LatestPosts.svelte  Post.svelte
LeaderlessGIT/frontend/src/pages/: 404.astro  index.astro
LeaderlessGIT/src/: api.zig  database.zig  main.zig  server.zig
Papyrus/: CMakeLists.txt  build.txt  glfw-test.c  main.c  test.c
Papyrus/include/: papyrus.h  papyrus_structures.h
Papyrus/renders/: glad.c  glfw.c  glfw.h
Papyrus/src/: CMakeLists.txt  papyrus.c  papyrus.h  papyrus_check.c  renders.h
Papyrus/test/: CMakeLists.txt  main.c
aboot/: .gitignore  Makefile  README.md  desktop.ini
aboot/src/: common.c  common.h  main.c
aboot/src/include/: malloc.c  malloc.h
aboot/src/include/boot/: protocol.h
aboot/src/include/exec/: aex.c  aex.h  elf.c  elf.h  loader.c  loader.h
aboot/src/include/io/: disk.c  disk.h  sfs.c  sfs.h
asrBuild/: build.bat  build.sh  run.sh
asrBuild/src/: logger.c  logger.h  main.c  script.c  script.h  src_discovery.c  src_discovery.h  util.h
asrBuild/test-proj/: build.lua
asrBuild/test-proj/src/: da_string.c  da_string.h  main.c
design/: design.md
design/low-level/: boot.md
design/low-level/adi/: adi-core.md  adi-ff.md
design/low-level/adi/metalangs/: metalangs.md  template.md
design/low-level/adi/metalangs/video/: fb.md
design/low-level/kernel/: aex.md  bootup.md  design.md  executive.md  object_manager.md  vfs.md
design/low-level/kernel/asr32/: asr32.md  event_system.md  syscalls.md  vfs.md
kernel-mockup/: .gitignore
kernel-mockup/src/: main.c  object_manager.c  object_manager.h
kernel_mockup/: build.sh  run.sh
kernel_mockup/src/: main.c  object_manager.c  object_manager.h
leaderless_theory/: leaderless_cookbook.md  the_leaderless_manifesto.md
